logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-01T190000+0000/task_id=Load_songplays_fact_table/attempt=3.log
[2025-07-24T13:47:55.553+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T13:47:55.562+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T13:47:55.562+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 4
[2025-07-24T13:47:55.573+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 19:00:00+00:00
[2025-07-24T13:47:55.579+0000] {standard_task_runner.py:60} INFO - Started process 279 to run task
[2025-07-24T13:47:55.581+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T19:00:00+00:00', '--job-id', '332', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpgg3et95a']
[2025-07-24T13:47:55.584+0000] {standard_task_runner.py:88} INFO - Job 332: Subtask Load_songplays_fact_table
[2025-07-24T13:47:55.644+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:47:55.719+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T19:00:00+00:00'
[2025-07-24T13:47:55.726+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:47:55.739+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T190000, start_date=20250724T134755, end_date=20250724T134755
[2025-07-24T13:47:55.751+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 332 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 279)
[2025-07-24T13:47:55.794+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:47:55.815+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T15:59:48.243+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T15:59:48.265+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [queued]>
[2025-07-24T15:59:48.266+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 4
[2025-07-24T15:59:48.285+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-01 19:00:00+00:00
[2025-07-24T15:59:48.297+0000] {standard_task_runner.py:60} INFO - Started process 1443 to run task
[2025-07-24T15:59:48.302+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-01T19:00:00+00:00', '--job-id', '1262', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp6s7v66p5']
[2025-07-24T15:59:48.308+0000] {standard_task_runner.py:88} INFO - Job 1262: Subtask Load_songplays_fact_table
[2025-07-24T15:59:48.445+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-01T19:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T15:59:48.571+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-01T19:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-01T19:00:00+00:00'
[2025-07-24T15:59:48.600+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 173, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert, 'songplays'),
  File "/opt/airflow/dags/etl_pipeline.py", line 132, in load_table
    cur.execute(f"INSERT INTO {table} {query}")
psycopg2.errors.UniqueViolation: duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.

[2025-07-24T15:59:48.623+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230101T190000, start_date=20250724T155948, end_date=20250724T155948
[2025-07-24T15:59:48.648+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1262 for task Load_songplays_fact_table (duplicate key value violates unique constraint "songplays_pkey"
DETAIL:  Key (playid)=(e30eb65b5ce5534fed9764a7996916ec) already exists.
; 1443)
[2025-07-24T15:59:48.676+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T15:59:48.718+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
